--- a/Frontend/TablaEstudiantes.html
+++ b/Frontend/TablaEstudiantes.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AppWeb de Estudiantes</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="./CSS/tabla.css">
     <script src="./JS/tabla.js"></script>
 </head>
@@ -36,7 +37,7 @@
                 <table class="table">
 
                     <thead>
-                        <tr class="cell">
+                        <tr>
                             <th>Id</th>
                             <th>Nombre</th>
                             <th>Apellido</th>
