--- a/Frontend/TablaEstudiantes.html
+++ b/Frontend/TablaEstudiantes.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AppWeb de Estudiantes</title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="./CSS/tabla.css">
     <script src="./JS/tabla.js"></script>
