--- a/Frontend/RegistroEstudiantes.html
+++ b/Frontend/RegistroEstudiantes.html
@@ -43,11 +43,11 @@
                 </fieldset>
                 
                 <button class="button" type="submit" id="registrarBtn">Registrar</button>
+                <button id="actualizarBtn" class="button" style="display: none;">Actualizar</button>
+
             </form>
         </section>
     </main>
-    <div id="mensajeRegistro" style="display: none;">¡Registro exitoso!</div>
-
     
 </body>
 </html>
