--- a/Frontend/RegistroEstudiantes.html
+++ b/Frontend/RegistroEstudiantes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Regsitro Estudiantes</title>
+    <title>Registro Estudiantes</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./css/base/base.css">
@@ -43,7 +43,6 @@
                 </fieldset>
                 
                 <button class="button" type="submit" id="registrarBtn">Registrar</button>
-                <button id="actualizarBtn" class="button" style="display: none;">Actualizar</button>
 
             </form>
         </section>
