Todas las funcionalidades ok, falta limpieza de código

--- a/src/main/resources/static/RegistroEstudiantes.html
+++ b/src/main/resources/static/RegistroEstudiantes.html
@@ -42,7 +42,7 @@
                     
                 </fieldset>
                 
-                <button class="button" type="submit" id="registrarBtn">Registrar</button>
+                <button class="button" type="submit" id="registrarBtn" name="registrarBtn">Registrar</button>
 
             </form>
         </section>
