--- a/src/main/resources/static/TablaEstudiantes.html
+++ b/src/main/resources/static/TablaEstudiantes.html
@@ -8,7 +8,7 @@
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
         <link rel="stylesheet" href="./CSS/tabla.css">
-        <script src="./JS/tabla.js"></script>
+        <script src="JS/TablaEstudiantes.js"></script>
     </head>
 
     <body>
